# playtimed

./: .SRCINFO  .gitignore  CHANGELOG.md  PKGBUILD  PKGBUILD-git  README.md  config.example.yaml  playtimed.install  pyproject.toml
.claude/: CLAUDE.md  session-learnings-2026-01-27.md  todo-message-router.md
.claude/examples/: README.md  browser_domain_detection.py  chrome_history_query.py
docs/: message-router-design.md  schedule.md
docs/adr/: ADR-001-browser-domain-tracking.md  ADR-002-modular-worker-architecture.md
prototype/: README.md  tui.py
scripts/: install.sh  uninstall.sh
src/playtimed/: __init__.py  browser.py  db.py  main.py  notify.py  router.py
src/playtimed/browser/: __init__.py  base.py  chrome.py  detection.py  firefox.py
systemd/: playtimed.service  playtimed.service.pkg
tests/: test_browser.py  test_db.py  test_router.py  test_state_machine.py
